# CuteHttpFileSystem

./: .editorconfig  .gitignore  README.md  config.example.json  design-qa.md  pyproject.toml
artifacts/: performance.json
docs/: 01-requirements.md  02-architecture.md  03-threat-model.md  04-api.md  05-user-guide.md  06-test-report.md  07-design-qa.md  08-release-checklist.md  09-handoff-2026-07-23.md
scripts/: benchmark_transfer.py  build_exe.cmd  build_exe.ps1  capture_gui.ps1  chfs_gui_entry.py
src/chfs/: __init__.py  audit.py  cli.py  config.py  errors.py  http.py  models.py  paths.py  security.py  services.py  transfers.py  uploads.py
src/chfs/gui/: __init__.py  app.py  controller.py
src/chfs/web/: app.css  app.js  index.html  sha256.js
tests/: __init__.py  test_audit.py  test_config.py  test_gui_controller.py  test_http.py  test_paths.py  test_security.py  test_services.py  test_transfers.py  test_uploads.py
